zokrates_cli/examples/compile_errors/div_by_zero.zok
def main(field input) -> field:
    field divisor = if true then 0 else 1 fi
    return input / divisor